PCHR-1251: Add dropdowns

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -129,7 +129,7 @@
                 class="fa"
                 aria-hidden="true"
                 ng-class="{ 'fa-chevron-down': report.isOpen.holiday, ' fa-chevron-right': !report.isOpen.holiday }"></i>
-              Public holidays
+              Public Holidays
             </td>
             <td></td>
             <td></td>
@@ -168,9 +168,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -183,9 +193,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -198,9 +218,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -213,9 +243,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -228,9 +268,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -243,9 +293,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -258,9 +318,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -273,9 +343,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -288,9 +368,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                   </tbody>
@@ -345,9 +435,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -360,9 +460,19 @@
                       <td></td>
                       <td>-2</td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -375,9 +485,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -390,9 +510,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -405,9 +535,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -420,9 +560,19 @@
                       <td></td>
                       <td>-1</td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                   </tbody>
@@ -496,9 +646,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                     <tr>
@@ -511,9 +671,19 @@
                       <td></td>
                       <td></td>
                       <td>
-                        <a class="chr_leave-report__action" href="#">
-                          <i class="fa fa-ellipsis-v"></i>
-                        </a>
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                            <li>
+                              <a href="#">Lorem Ipsum</a>
+                            </li>
+                          </ul>
+                        </div>
                       </td>
                     </tr>
                   </tbody>
