PCHR-1272: First draft of html

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar.html
@@ -1,2 +1,362 @@
-<div>
-</div>
+<section>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <div class="row">
+        <div class="col-sm-2">
+          <input type="text" class="form-control">
+        </div>
+        <div class="col-sm-offset-7 col-sm-3">
+          <div class="chr_custom-select chr_custom-select--full">
+            <select>
+              <option value="1" selected>Current Period (2016)</option>
+              <option value="2">2017</option>
+              <option value="3">2018</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section class="panel panel-default">
+    <header class="panel-heading">
+      <h2 class="panel-title">May 2015</h2>
+    </header>
+    <div class="table-responsive">
+      <table class="table table-bordered chr_leave-calendar">
+        <thead>
+          <tr class="chr_leave-calendar__days">
+            <th>Fri <span>1</span></th>
+            <th class="chr_leave-calendar__weekend">Sat <span>2</span></th>
+            <th class="chr_leave-calendar__weekend">Sun <span>3</span></th>
+            <th>Mon <span>4</span></th>
+            <th>Tue <span>5</span></th>
+            <th>Wed <span>6</span></th>
+            <th>Thu <span>7</span></th>
+            <th>Fri <span>8</span></th>
+            <th class="chr_leave-calendar__weekend">Sat <span>9</span></th>
+            <th class="chr_leave-calendar__weekend">Sun <span>10</span></th>
+            <th>Mon <span>11</span></th>
+            <th>Tue <span>12</span></th>
+            <th>Wed <span>13</span></th>
+            <th>Thu <span>14</span></th>
+            <th>Fri <span>15</span></th>
+            <th class="chr_leave-calendar__weekend">Sat <span>16</span></th>
+            <th class="chr_leave-calendar__weekend">Sun <span>17</span></th>
+            <th>Mon <span>18</span></th>
+            <th>Tue <span>19</span></th>
+            <th>Wed <span>20</span></th>
+            <th>Thu <span>21</span></th>
+            <th>Fri <span>22</span></th>
+            <th class="chr_leave-calendar__weekend">Sat <span>23</span></th>
+            <th class="chr_leave-calendar__weekend">Sun <span>24</span></th>
+            <th>Mon <span>25</span></th>
+            <th>Tue <span>26</span></th>
+            <th>Wed <span>27</span></th>
+            <th>Thu <span>28</span></th>
+            <th>Fri <span>29</span></th>
+            <th class="chr_leave-calendar__weekend">Sat <span>30</span></th>
+            <th class="chr_leave-calendar__weekend">Sun <span>31</span></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="chr_leave-calendar__items">
+            <td></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"></div>
+            </td>
+            <td class="chr_leave-calendar__weekend">
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"></div>
+            </td>
+            <td class="chr_leave-calendar__weekend">
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"></div>
+            </td>
+            <td>
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"></div>
+            </td>
+            <td>
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"><span>AM</span></div>
+            </td>
+            <td></td>
+            <td></td>
+            <td>
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--leave"><span>PM</span></div>
+            </td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td></td>
+            <td>
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--toil"></div>
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--alt chr_leave-calendar__item--type--toil"><span>AT</span></div>
+            </td>
+            <td></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td class="chr_leave-calendar__weekend"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+  <section class="panel panel-default">
+    <header class="panel-heading">
+      <h2 class="panel-title">April 2015</h2>
+    </header>
+    <div class="table-responsive">
+      <table class="table table-bordered chr_leave-calendar">
+        <thead>
+          <tr class="chr_leave-calendar__days">
+            <th>Wed <span>1</span></th>
+            <th>Thu <span>2</span></th>
+            <th>Fri <span>3</span></th>
+            <th class="chr_leave-calendar__weekend">Sat <span>4</span></th>
+            <th class="chr_leave-calendar__weekend">Sun <span>5</span></th>
+            <th>Mon <span>6</span></th>
+            <th>Tue <span>7</span></th>
+            <th>Wed <span>8</span></th>
+            <th>Thu <span>9</span></th>
+            <th>Fri <span>10</span></th>
+            <th class="chr_leave-calendar__weekend">Sat <span>11</span></th>
+            <th class="chr_leave-calendar__weekend">Sun <span>12</span></th>
+            <th>Mon <span>13</span></th>
+            <th>Tue <span>14</span></th>
+            <th>Wed <span>15</span></th>
+            <th>Thu <span>16</span></th>
+            <th>Fri <span>17</span></th>
+            <th class="chr_leave-calendar__weekend">Sat <span>18</span></th>
+            <th class="chr_leave-calendar__weekend">Sun <span>19</span></th>
+            <th>Mon <span>20</span></th>
+            <th>Tue <span>21</span></th>
+            <th>Wed <span>22</span></th>
+            <th>Thu <span>23</span></th>
+            <th>Fri <span>24</span></th>
+            <th class="chr_leave-calendar__weekend">Sat <span>25</span></th>
+            <th class="chr_leave-calendar__weekend">Sun <span>26</span></th>
+            <th>Mon <span>27</span></th>
+            <th>Tue <span>28</span></th>
+            <th>Wed <span>29</span></th>
+            <th>Thu <span>30</span></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="chr_leave-calendar__items">
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td>
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--type--public-holiday"></div>
+            </td>
+            <td></td>
+            <td>
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil"></div>
+            </td>
+            <td></td>
+            <td></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--type--sickness"></div>
+            </td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td class="chr_leave-calendar__weekend"></td>
+            <td></td>
+            <td></td>
+            <td>
+              <div class="chr_leave-calendar__item chr_leave-calendar__item--alt chr_leave-calendar__item--type--late"><span>L</span></div>
+            </td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+  <section class="panel panel-default">
+    <header class="panel-heading panel-heading-plain">
+      <h2 class="panel-title">
+        <i class="fa fa-chevron-down"></i>
+        Legend
+      </h2>
+    </header>
+    <div class="panel-body chr_leave-calendar__legend">
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"></div>Leave
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"><span>AM</span></div>Leave AM Only
+          </div>
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"><span>PM</span></div>Leave PM Only
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--leave"></div>Requested Leave
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--leave"><span>AM</span></div>Requested Leave AM
+          </div>
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--leave"><span>PM</span></div>Requested Leave PM
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil"></div>TOIL
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil"><span>AM</span></div>TOIL AM Only
+          </div>
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil"><span>PM</span></div>TOIL PM Only
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--toil"></div>Requested TOIL
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--toil"><span>AM</span></div>Requested TOIL AM
+          </div>
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--toil"><span>PM</span></div>Requested TOIL PM
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil chr_leave-calendar__item--alt"><span>AT</span></div>Accrued TOIL
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--sickness"></div>Sick
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--sickness"><span>AM</span></div>Sick AM Only
+          </div>
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--sickness"><span>PM</span></div>Sick PM Only
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--sickness"></div>Requested Sick
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--sickness"><span>AM</span></div>Requested Sick AM
+          </div>
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--sickness"><span>PM</span></div>Requested Sick PM
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--weekend"></div>Weekend
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--public-holiday"></div>Public Holiday
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--non-working"></div>Non Working Day
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__item">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--late chr_leave-calendar__item--alt"><span>L</span></div>Late
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</section>
+<style>
+  /* Absence types (to be created dynamically via AngularJS) */
+  .chr_leave-calendar__item--type--leave {
+    background-color: #4d6b81;
+    border-color: #4d6b81;
+  }
+
+  .chr_leave-calendar__item--type--toil {
+    background-color: #c096aa;
+    border-color: #c096aa;
+  }
+
+  .chr_leave-calendar__item--type--sickness {
+    background-color: #e5807f;
+    border-color: #e5807f;
+  }
+
+  .chr_leave-calendar__item--type--public-holiday {
+    background-color: #8ec68a;
+    border-color: #8ec68a;
+  }
+
+  .chr_leave-calendar__item--type--weekend {
+    background-color: #c7cbd0;
+    border-color: #c7cbd0;
+  }
+
+  .chr_leave-calendar__item--type--non-working {
+    background-color: #41afcb;
+    border-color: #41afcb;
+  }
+
+  .chr_leave-calendar__item--type--late {
+    background-color: #eca67e;
+    border-color: #eca67e;
+  }
+</style>
