--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar.html
@@ -209,114 +209,137 @@
     <div class="panel-body chr_leave-calendar__legend">
       <div class="row">
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"></div>Leave
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"></div>
+            <span class="chr_leave-calendar__legend__label">Leave</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"><span>AM</span></div>Leave AM Only
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"><span>AM</span></div>
+            <span class="chr_leave-calendar__legend__label">Leave AM Only</span>
           </div>
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"><span>PM</span></div>Leave PM Only
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--leave"></div>Requested Leave
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--leave"><span>PM</span></div>
+            <span class="chr_leave-calendar__legend__label">Leave PM Only</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--leave"><span>AM</span></div>Requested Leave AM
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--leave"></div>
+            <span class="chr_leave-calendar__legend__label">Requested Leave</span>
           </div>
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--leave"><span>PM</span></div>Requested Leave PM
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--leave"><span>AM</span></div>
+            <span class="chr_leave-calendar__legend__label">Requested Leave AM</span>
+          </div>
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--leave"><span>PM</span></div>
+            <span class="chr_leave-calendar__legend__label">Requested Leave PM</span>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil"></div>TOIL
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil"></div>
+            <span class="chr_leave-calendar__legend__label">TOIL</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil"><span>AM</span></div>TOIL AM Only
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil"><span>AM</span></div>
+            <span class="chr_leave-calendar__legend__label">TOIL AM Only</span>
           </div>
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil"><span>PM</span></div>TOIL PM Only
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--toil"></div>Requested TOIL
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil"><span>PM</span></div>
+            <span class="chr_leave-calendar__legend__label">TOIL PM Only</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--toil"><span>AM</span></div>Requested TOIL AM
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--toil"></div>
+            <span class="chr_leave-calendar__legend__label">Requested TOIL</span>
           </div>
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--toil"><span>PM</span></div>Requested TOIL PM
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--toil"><span>AM</span></div>
+            <span class="chr_leave-calendar__legend__label">Requested TOIL AM</span>
+          </div>
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--toil"><span>PM</span></div>
+            <span class="chr_leave-calendar__legend__label">Requested TOIL PM</span>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil chr_leave-calendar__item--alt"><span>AT</span></div>Accrued TOIL
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--toil chr_leave-calendar__item--alt"><span>AT</span></div>
+            <span class="chr_leave-calendar__legend__label">Accrued TOIL</span>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--sickness"></div>Sick
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--sickness"></div>
+            <span class="chr_leave-calendar__legend__label">Sick</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--sickness"><span>AM</span></div>Sick AM Only
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--sickness"><span>AM</span></div>
+            <span class="chr_leave-calendar__legend__label">Sick AM Only</span>
           </div>
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--sickness"><span>PM</span></div>Sick PM Only
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--sickness"></div>Requested Sick
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--sickness"><span>PM</span></div>
+            <span class="chr_leave-calendar__legend__label">Sick PM Only</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--sickness"><span>AM</span></div>Requested Sick AM
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--sickness"></div>
+            <span class="chr_leave-calendar__legend__label">Requested Sick</span>
           </div>
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--sickness"><span>PM</span></div>Requested Sick PM
+        </div>
+        <div class="col-sm-3">
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--sickness"><span>AM</span></div>
+            <span class="chr_leave-calendar__legend__label">Requested Sick AM</span>
+          </div>
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--requested chr_leave-calendar__item--type--sickness"><span>PM</span></div>
+            <span class="chr_leave-calendar__legend__label">Requested Sick PM</span>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--weekend"></div>Weekend
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--weekend"></div>
+            <span class="chr_leave-calendar__legend__label">Weekend</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--public-holiday"></div>Public Holiday
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--public-holiday"></div>
+            <span class="chr_leave-calendar__legend__label">Public Holiday</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--non-working"></div>Non Working Day
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--non-working"></div>
+            <span class="chr_leave-calendar__legend__label">Non Working Day</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="chr_leave-calendar__legend__item">
-            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--late chr_leave-calendar__item--alt"><span>L</span></div>Late
+          <div class="chr_leave-calendar__legend__entry">
+            <div class="chr_leave-calendar__item chr_leave-calendar__item--type--late chr_leave-calendar__item--alt"><span>L</span></div>
+            <span class="chr_leave-calendar__legend__label">Late</span>
           </div>
         </div>
       </div>
