--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar.html
@@ -2,9 +2,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <div class="row">
-        <div class="col-sm-2">
-          <input type="text" class="form-control">
-        </div>
+        <div class="col-sm-2"></div>
         <div class="col-sm-offset-7 col-sm-3">
           <div class="chr_custom-select chr_custom-select--full">
             <select>
