PCHR-1746: Use label instead of name for regions and locations

--- a/contactaccessrights/views/access-rights-modal.html
+++ b/contactaccessrights/views/access-rights-modal.html
@@ -25,7 +25,7 @@
           </label>
           <div class="col-xs-12 col-sm-8">
             <ui-select multiple ng-required="true" theme="civihr-ui-select" ng-model="modalCtrl.selectedData.regions">
-              <ui-select-match placeholder="- select -">{{$item.name}}</ui-select-match>
+              <ui-select-match placeholder="- select -">{{$item.label}}</ui-select-match>
               <ui-select-choices repeat="region.id as region in modalCtrl.availableData.regions | filter: $select.search">
                 <div ng-bind-html="region.name | highlight: $select.search"></div>
               </ui-select-choices>
@@ -38,7 +38,7 @@
           </label>
           <div class="col-xs-12 col-sm-8">
             <ui-select multiple ng-required="true" theme="civihr-ui-select" ng-model="modalCtrl.selectedData.locations">
-              <ui-select-match placeholder="- select -">{{$item.name}}</ui-select-match>
+              <ui-select-match placeholder="- select -">{{$item.label}}</ui-select-match>
               <ui-select-choices repeat="location.id as location in modalCtrl.availableData.locations | filter: $select.search">
                 <div ng-bind-html="location.name | highlight: $select.search"></div>
               </ui-select-choices>
