--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
@@ -1,10 +1,9 @@
 <div class="my-leave-page">
   <div class="button-container">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary dropdown-toggle"
-        data-toggle="dropdown" aria-haspopup="true"
-        aria-expanded="false">
-        Record New Absence
+      <button type="button" class="btn btn-primary" ng-click="myleave.showModal()">Record New Absence</button>
+      <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split"
+              data-toggle="dropdown">
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
